# R-Type

./: .gitignore  CMakeLists.txt  Makefile  README.md  SEGFAULTS  TODO  cmake_install.cmake  dependencies.sh
Client/: CMakeLists.txt
Client/inc/: AssetsController.h  AssetsController.hh  BasicAlienProjectileGraphical.h  BasicPlayerProjectileGraphical.h  BydoAlienGraphical.hh  DokanAlienGraphical.hh  ExitButton.h  Explosion.hh  GameSelectorController.hh  GlamAlienGraphical.hh  GraphicalItem.h  ISocket.h  ItemController.hh  JoinButton.h  KayberosAlienGraphical.hh  KeyboardStatus.hh  Manager.hh  MenuButton.h  MenuController.hh  PlayerGraphical.h  RiosAlienGraphical.hh  ScantAlienGraphical.hh  ScoreController.hh  ShellAlienGraphical.hh  ShipItem.hh  ShotItem.hh  TCPSocket.h  TextArea.h  UDPSocket.h  ViewController.hh  WNetwork.hh  WNetwork.tpp  WallGraphical.hh  Xelf16AlienGraphical.hh  YorkAlienGraphical.hh
Client/include/: AClientPacket.hh  AServerPacket.hh  AServerPacket.tpp  AssetsController.hh  AuthTCPPacket.h  Background.h  BasicAlienProjectileGraphical.h  BasicPlayerProjectileGraphical.h  BonusSpeedGraphical.hh  BydoAlienGraphical.hh  CINetwork.hh  CNetworkHandler.hh  CTCPSocket.hh  CUDPNetworkHandler.hh  CUDPSocket.hh  CUNetwork.hh  CUNetwork.tpp  CWNetwork.hh  CWNetwork.tpp  Client.h  Exceptions.hpp  Explosion.hh  FailPacket.h  GameItem.h  GameItem.hh  GameListPacket.h  GameOverPacket.h  GameSelectorController.hh  GlamAlienGraphical.hh  GraphicalItem.h  IClientPacket.hh  INetwork.hh  IServerPacket.hh  ISocket.h  ItemController.h  ItemController.hh  JoinPacket.hh  KayberosAlienGraphical.hh  KeyboardStatus.hh  Manager.h  (+28 more)
Client/src/: AssetsController.cpp  AuthUDPPacket.cpp  Background.cpp  BasicAlienProjectileGraphical.cpp  BasicPlayerProjectileGraphical.cpp  BonusSpeedGraphical.cpp  BydoAlienGraphical.cpp  CNetworkHandler.cpp  CTCPSocket.cpp  CUDPNetworkHandler.cpp  CUDPSocket.cpp  Client.cpp  CrePlayPacket.cpp  DesGamePacket.cpp  DokanAlienGraphical.cpp  ExitButton.cpp  Explosion.cpp  FailPacket.cpp  GameInfoPacket.cpp  GameItem.cpp  GameListPacket.cpp  GameOverPacket.cpp  GameSelectorController.cpp  GlamAlienGraphical.cpp  GraphicalItem.cpp  ItemController.cpp  JoinButton.cpp  JoinPacket.cpp  KayberosAlienGraphical.cpp  Manager.cpp  MenuButton.cpp  MenuController.cpp  MultiShootGraphical.cpp  NetworkHandler.cpp  NewGamePacket.cpp  NickPacket.cpp  PlayerGraphical.cpp  RiosAlienGraphical.cpp  ScantAlienGraphical.cpp  ScoreController.cpp  (+16 more)
Common/: EntitySystem.txt
Common/inc/: .#Exceptions.hpp  ABonus.hh  AServerPacket.tpp  Alien.hh  AlienFactory.hpp  AlivePacket.hh  AuthTCPPacket.h  AuthUDPPacket.h  BasicAlienProjectile.hh  BasicPlayerProjectile.hh  Bomb.hh  BonusPacket.hh  BonusPlayerProjectile.hh  BonusSpeed.hh  BydoAlien.hh  CreIAPacket.h  CreObjPacket.h  DelItemPacket.h  DisconnectPacket.cpp  DisconnectPacket.h  DokanAlien.hh  Exceptions.hpp  FactoryManager.hh  FailPacket.h  GameListPacket.h  GlamAlien.hh  IAlienFactory.hh  IClientPacket.hh  IObject.hh  IServerPacket.hh  KayberosAlien.hh  LevelLoader.hh  MapController.hh  MovePacket.h  MultiShoot.hh  NetworkDefines.h  NextLvlPacket.hh  NickPacket.h  Object.hh  ObjectInfo.hpp  (+14 more)
Common/src/: .#FactoryManager.cpp  .#Object.cpp  ABonus.cpp  Alien.cpp  AlivePacket.cpp  AuthUDPPacket.cpp  BasicAlienProjectile.cpp  BasicPlayerProjectile.cpp  BonusPacket.cpp  BonusSpeed.cpp  BydoAlien.cpp  CreIAPacket.cpp  CreObjPacket.cpp  CrePlayPacket.cpp  DelItemPacket.cpp  DesGamePacket.cpp  DisconnectPacket.cpp  DokanAlien.cpp  FactoryManager.cpp  FailPacket.cpp  GlamAlien.cpp  Kayberos.cpp  LevelLoader.cpp  MapController.cpp  MovePacket.cpp  MultiShoot.cpp  NextLvlPacket.cpp  NickPacket.cpp  Object.cpp  Obstacle.cpp  PacketFactory.cpp  Player.cpp  Projectile.cpp  RiosAlien.cpp  ScantAlien.cpp  SendMovePacket.cpp  ShellAlien.cpp  Waves.cpp  Xelf16Alien.cpp  YorkAlien.cpp  (+1 more)
Commoni/: AuthUDPPacket.h  DesGamePacket.h
Commoni/includes/: AClientPacket.hh  AClientPacket.tpp  AServerPacket.hh  AServerPacket.tpp  AuthTCPPacket.h  AuthUDPPacket.h  CAuthUDPPacket.h  CreIAPacket.h  CreObjPacket.h  CreObstaclePacket.h  CrePlayPacket.h  CreShotPacket.h  (+17 more)
Server/: #CMakeLists.txt#  .#CMakeLists.txt  CMakeLists.txt
Server/inc/: #AlienFactory.hh#  #Player.hh#  .#AlienFactory.hh  Alien.hh  AlienFactory.hpp  BasicAlienProjectile.hh  BasicPlayerPojectile.hh  BasicPlayerProjectile.hh  Bomb.hh  BydoAlien.hh  FactoryManager.hh  GlamAlien.hh  IObject.hh  KayberosAlien.hh  LevelLoader.hh  MapController.hh  Object.hh  ObjectInfo.hpp  Player.hh  Projectile.hh  Waves.hh  Xelf16Alien.hh
Server/includes/: AClientPacket.hh  AClientPacket.tpp  AServerPacket.hh  AuthPacket.h  AuthTCPPacket.h  AuthUDPPacket.h  ClientInfo.h  CrePlayPacket.h  DesGamePacket.h  Dispatcher.h  Exceptions.hpp  FailPacket.h  Game.h  GameCore.hh  GameHandler.h  GameInfo.h  GameInfoPacket.h  GameListPacket.h  GameOverPacket.h  GamerInfo.hh  IClientPacket.hh  IMutex.h  INetwork.h  INetwork.hh  IObject.h  IPacket.h  IServerPacket.h  IServerPacket.hh  ISocket.h  IThread.h  JoinPacket.hh  NetworkDefines.h  NetworkHandler.h  NewGamePacket.h  NewgamePacket.h  NickPacket.h  PacketFactory.hh  SINetwork.hh  SNetworkHandler.h  STCPSocket.h  (+24 more)
Server/level/: HowDoLevel.txt  Level1.lvl
Server/src/: #Bomb.cpp#  #Object.cpp#  #Projectile.cpp#  #Waves.cpp#  .#Object.cpp  AClientPacket.cpp  Alien.cpp  AuthPacket.cpp  AuthTCPPacket.cpp  AuthUDPPacket.cpp  BasicAlienProjectile.cpp  BasicPlayerProjectile.cpp  Bomb.cpp  BydoAlien.cpp  ClientInfo.cpp  CrePlayPacket.cpp  DesGamePacket.cpp  Dispatcher.cpp  FactoryManager.cpp  FailPacket.cpp  Game.cpp  GameCore.cpp  GameHandler.cpp  GameInfo.cpp  GameInfoPacket.cpp  GameListPacket.cpp  GameOverPacket.cpp  GamerInfo.cpp  JoinPacket.cpp  LevelLoader.cpp  NetworkHandler.cpp  NewGamePacket.cpp  NickPacket.cpp  Object.cpp  PacketFactory.cpp  Player.cpp  Projectile.cpp  SNetworkHandler.cpp  STCPSocket.cpp  SUDPSocket.cpp  (+15 more)
Server/src/after/: Bomb.cpp
doc-pak/: README.md  TODO
level/: HowDoLevel.txt  Level1.lvl  Level1.lvl.backup  Level2.lvl  Level3.lvl  Level4.lvl
(+24 files in other folders)
